--- a/src/main/resources/static/websocket-test.html
+++ b/src/main/resources/static/websocket-test.html
@@ -3,51 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebSocket Chat</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
+    <title>WebSocket Test</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.1/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h2 {
+            color: #333;
+        }
+        input, button {
+            margin: 5px 0;
+            padding: 10px;
+            font-size: 14px;
+        }
+        #messages {
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-top: 10px;
+            max-height: 300px;
+            overflow-y: auto;
+            background-color: #f9f9f9;
+        }
+        .sent {
+            color: blue;
+        }
+        .received {
+            color: green;
+        }
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
-<h2>WebSocket Chat</h2>
+<h2>🔹 WebSocket STOMP Test</h2>
 
-<div>
-    <input type="text" id="message" placeholder="Type a message..." />
-    <button onclick="sendMessage()">Send</button>
-</div>
+<label for="token">🔑 JWT Token:</label>
+<input type="text" id="token" placeholder="Enter your JWT token here"><br>
 
-<h3>Messages:</h3>
-<ul id="messages"></ul>
+<button onclick="connect()">✅ Connect</button>
+<button onclick="disconnect()">❌ Disconnect</button><br><br>
+
+<label for="message">💬 Message:</label>
+<input type="text" id="message" placeholder="Enter your message">
+<button onclick="sendMessage()">📤 Send</button><br><br>
+
+<h3>📩 Received Messages:</h3>
+<div id="messages"></div>
 
 <script>
-    // WebSocket bağlantısını oluştur
-    let socket = new SockJS('http://localhost:8080/ws');
-    let stompClient = Stomp.over(socket);
+    var stompClient = null;
 
-    stompClient.connect({}, function (frame) {
-        console.log("Connected to WebSocket: " + frame);
+    function connect() {
+        var token = document.getElementById("token").value.trim();
+        if (!token) {
+            alert("⚠️ Please enter a valid JWT token!");
+            return;
+        }
 
-        // 📌 `/topic/public` kanalına abone ol
-        stompClient.subscribe('/topic/public', function (message) {
-            showMessage(message.body);
-        });
-    });
+        var socket = new SockJS("http://localhost:8080/ws");
+        stompClient = Stomp.over(socket);
 
-    // 📌 Mesajı sunucuya gönder
-    function sendMessage() {
-        let messageContent = document.getElementById("message").value;
-        if (messageContent) {
-            stompClient.send("/app/sendMessage", {}, messageContent);
-            document.getElementById("message").value = ""; // Mesaj kutusunu temizle
+        stompClient.connect(
+            { Authorization: "Bearer " + token },
+            function (frame) {
+                console.log("✅ Connected: " + frame);
+                displayMessage("✅ Connected to WebSocket", "info");
+
+                // Subscribe to public topic
+                stompClient.subscribe("/topic/tasks", function (message) {
+                    console.log("📩 Received: " + message.body);
+                    displayMessage("📩 " + message.body, "received");
+                });
+
+                // Subscribe to user-specific messages
+                stompClient.subscribe("/user/queue/reply", function (message) {
+                    console.log("📩 [User] " + message.body);
+                    displayMessage("📩 [User] " + message.body, "received");
+                });
+            },
+            function (error) {
+                console.error("❌ WebSocket Error: ", error);
+                displayMessage("❌ Connection failed: " + error, "error");
+            }
+        );
+    }
+
+    function disconnect() {
+        if (stompClient !== null) {
+            stompClient.disconnect();
+            console.log("❌ Disconnected");
+            displayMessage("❌ Disconnected", "info");
         }
     }
 
-    // 📌 Mesajları ekrana yazdır
-    function showMessage(message) {
-        let messagesList = document.getElementById("messages");
-        let messageElement = document.createElement("li");
-        messageElement.appendChild(document.createTextNode(message));
-        messagesList.appendChild(messageElement);
+    function sendMessage() {
+        var messageContent = document.getElementById("message").value.trim();
+        if (stompClient && stompClient.connected && messageContent) {
+            stompClient.send("/app/task-updates", {}, JSON.stringify({ message: messageContent }));
+            console.log("📤 Sent: " + messageContent);
+            displayMessage("📤 Sent: " + messageContent, "sent");
+            document.getElementById("message").value = "";
+        } else {
+            alert("⚠️ Cannot send message. Check connection and message content.");
+        }
+    }
+
+    function displayMessage(message, type) {
+        let messagesDiv = document.getElementById("messages");
+        let messageElement = document.createElement("p");
+
+        messageElement.textContent = message;
+        if (type === "sent") messageElement.classList.add("sent");
+        else if (type === "received") messageElement.classList.add("received");
+        else if (type === "error") messageElement.classList.add("error");
+
+        messagesDiv.appendChild(messageElement);
+        messagesDiv.scrollTop = messagesDiv.scrollHeight; // Always scroll to the latest message
     }
 </script>
 
